--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "codestyle": "prettier . --write"
+  },
   "dependencies": {},
   "packageManager": "yarn@1.22.22",
   "devDependencies": {
@@ -16,6 +19,8 @@
     "chai": "^4.2.0",
     "hardhat": "^2.22.7",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-solidity": "^1.3.1",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typescript": "~5.0.4",
