add collection minter

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ package-lock.json
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# Remix
+.states
+/contracts/artifacts
