--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "scripts": {
     "codestyle": "prettier . --write"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2"
+  },
   "packageManager": "yarn@1.22.22",
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
