--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "license": "Apache-2.0",
+  "version": "0.0.1",
   "scripts": {
+    "test:hh": "npx hardhat test --no-compile --config ./hardhat.test.config.ts",
+    "run:hh": "npx hardhat run --no-compile",
     "codestyle": "prettier . --write"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   },
   "packageManager": "yarn@1.22.22",
   "devDependencies": {
