--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "npx hardhat test --config ./hardhat.test.config.ts",
     "test:hh": "npx hardhat test --no-compile --config ./hardhat.test.config.ts --network testnet",
     "run:hh": "npx hardhat run --no-compile",
+    "compile": "npx hardhat compile --force",
     "codestyle": "prettier . --write"
   },
   "dependencies": {
