--- a/.prettierignore
+++ b/.prettierignore
@@ -14,3 +14,7 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# Foundry
+/cache_forge
+/lib
