--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "@unique-nft/sdk": "^0.7.7",
     "@unique-nft/utils": "^0.3.20",
     "dotenv": "^16.4.5"
   },
