--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
+    "@unique-nft/contracts": "^0.0.1",
     "@unique-nft/sdk": "^0.7.7",
     "@unique-nft/utils": "^0.3.20",
     "chai": "^4.2.0",
