--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@unique-nft/contracts",
-  "license": "MIT",
-  "version": "0.0.2",
   "description": "Smart Contract library for Unique Network",
+  "version": "0.0.2",
+  "files": [
+    "/**/*.sol",
+    "!/recipes"
+  ],
+  "license": "MIT",
   "keywords": [
     "unique network",
     "blockchain",
@@ -16,10 +20,6 @@
     "type": "git",
     "url": "git+https://github.com/UniqueNetwork/unique-contracts.git"
   },
-  "files": [
-    "/contracts/**/*.sol",
-    "!/contracts/recipes"
-  ],
   "scripts": {
     "test": "yarn compile && yarn test:hh & yarn test:f",
     "test:f": "forge test --gas-report",
@@ -31,9 +31,9 @@
     "codestyle": "prettier . --write",
     "ci": "yarn compile:f && yarn test:f",
     "prepublishOnly": "yarn ci",
-    "build:dist": "mkdir -p dist && cp package.json README.md dist/ && rsync -a --exclude='recipes' contracts/ dist/",
     "changeset": "npx changeset",
-    "local-release": "changeset version && changeset publish"
+    "build": "rm -r dist && mkdir -p dist && cp -r package.json README.md CHANGELOG.md .changeset dist/ && rsync -a contracts/ dist/",
+    "local-release": "yarn ci && cd ./dist && changeset version && changeset publish"
   },
   "dependencies": {
     "@unique-nft/solidity-interfaces": "^1.0.1"
