--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-  "name": "contracts",
+  "name": "@unique-nft/contracts",
+  "description": "Smart Contract library for Unique Network",
+  "version": "0.0.2",
+  "files": [
+    "/**/*.sol",
+    "!/recipes"
+  ],
   "license": "MIT",
-  "version": "0.0.1",
+  "keywords": [
+    "unique network",
+    "blockchain",
+    "polkadot",
+    "nft",
+    "contracts"
+  ],
+  "homepage": "https://github.com/UniqueNetwork/unique-contracts",
+  "bugs": "https://github.com/UniqueNetwork/unique-contracts/issues",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UniqueNetwork/unique-contracts.git"
+  },
   "scripts": {
-    "test": "yarn compile && yarn test:hh && yarn test:forge",
-    "test:forge": "forge test --gas-report",
+    "test": "yarn compile && yarn test:hh & yarn test:f",
+    "test:f": "forge test --gas-report",
     "test:hh": "npx hardhat test --no-compile --config ./hardhat.test.config.ts --network testnet",
     "run:hh": "npx hardhat run --no-compile",
-    "compile": "yarn compile:hh & yarn compile:forge",
+    "compile": "yarn compile:hh & yarn compile:f",
     "compile:hh": "npx hardhat compile --force",
-    "compile:forge": "forge compile --force",
-    "codestyle": "prettier . --write"
+    "compile:f": "forge compile --force",
+    "codestyle": "prettier . --write",
+    "ci": "yarn compile:f && yarn test:f",
+    "prepublishOnly": "yarn ci",
+    "changeset": "npx changeset",
+    "build": "rm -r dist && mkdir -p dist && cp -r package.json README.md CHANGELOG.md .changeset dist/ && rsync -a contracts/ dist/",
+    "local-release": "yarn ci && cd ./dist && changeset version && changeset publish"
   },
   "dependencies": {
-    "@unique-nft/sdk": "^0.7.7",
-    "@unique-nft/utils": "^0.3.20",
-    "dotenv": "^16.4.5"
+    "@unique-nft/solidity-interfaces": "^1.0.1"
   },
-  "packageManager": "yarn@1.22.22",
   "devDependencies": {
+    "@changesets/cli": "^2.27.8",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-foundry": "^1.1.2",
@@ -33,8 +54,11 @@
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
-    "@unique-nft/solidity-interfaces": "^1.0.1",
+    "@unique-nft/contracts": "^0.0.2",
+    "@unique-nft/sdk": "^0.7.7",
+    "@unique-nft/utils": "^0.3.20",
     "chai": "^4.2.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "hardhat": "^2.22.7",
     "hardhat-gas-reporter": "^1.0.8",
@@ -44,5 +68,6 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.2",
     "typescript": "~5.0.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
