--- a/compiler_config.json
+++ b/compiler_config.json
@@ -1,34 +1,32 @@
 {
-	"language": "Solidity",
-	"settings": {
-		"optimizer": {
-			"enabled": true,
-			"runs": 200
-		},
-		"viaIR": true,
-		"outputSelection": {
-			"*": {
-				"": [
-					"ast"
-				],
-				"*": [
-					"abi",
-					"metadata",
-					"devdoc",
-					"userdoc",
-					"storageLayout",
-					"evm.legacyAssembly",
-					"evm.bytecode",
-					"evm.deployedBytecode",
-					"evm.methodIdentifiers",
-					"evm.gasEstimates",
-					"evm.assembly"
-				]
-			}
-		},
-		"remappings": [
-			"ds-test/=lib/forge-std/lib/ds-test/src/",
-			"forge-std/=lib/forge-std/src/"
-		]
-	}
+  "language": "Solidity",
+  "settings": {
+    "optimizer": {
+      "enabled": true,
+      "runs": 200
+    },
+    "viaIR": true,
+    "outputSelection": {
+      "*": {
+        "": ["ast"],
+        "*": [
+          "abi",
+          "metadata",
+          "devdoc",
+          "userdoc",
+          "storageLayout",
+          "evm.legacyAssembly",
+          "evm.bytecode",
+          "evm.deployedBytecode",
+          "evm.methodIdentifiers",
+          "evm.gasEstimates",
+          "evm.assembly"
+        ]
+      }
+    },
+    "remappings": [
+      "ds-test/=lib/forge-std/lib/ds-test/src/",
+      "forge-std/=lib/forge-std/src/"
+    ]
+  }
 }
