--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
     "@unique-nft/contracts": "^0.0.2",
-    "@unique-nft/sdk": "^0.7.7",
+    "@unique-nft/sdk": "2.4.1",
     "@unique-nft/utils": "^0.3.20",
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
